--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/pro-table": "^3.8.2",
-    "@byron-react/antd-virtual-table": "^0.0.1",
+    "@byron-react/antd-virtual-table": "^0.0.4",
     "@minko-fe/use-antd-resizable-header": "^2.8.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +17,7 @@
     "antd": "^5.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
