--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@byron-react/antd-virtual-table",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "antd-virtual-table",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -37,6 +37,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@ant-design/pro-table": "^3.8.2",
     "@types/react": "^18.2.14",
     "@types/react-window": "^1.8.5",
     "antd": "^5.6.3",
@@ -50,6 +51,7 @@
     "react-window": "^1.8.9"
   },
   "peerDependencies": {
+    "@ant-design/pro-table": ">=3.0.0",
     "antd": ">=4.23.0 || >=5.0.0",
     "react": ">=17.0.0"
   }
